--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@ body {
 h1 {
   color: black;
   text-align: center;
+  
 }
-
 p {
   font-family:sans-serif;
+  font-size: 25px;
+}
+p1
+{
+font-family:sans-serif;
+  font-size: 25px;}
+pre
+{
+font-family:sans-serif;
+  font-size: 25px;}
+  
+li{
+font-family:sans-serif;
   font-size: 25px;
 }
 </style>
@@ -20,24 +33,30 @@ p {
 <body>
 
 <h1>자기소개서</h1>
-<pre>
+<p>이름:신승덕
 
 
-
-
-
-
-
-
-
-
-<p>이름:신승덕</p>
-
-
-<p>소속:세명대학교</p>
-<p></p>
+소속:세명대학교
+</p>
+<p1>공부하고있는 언어</p1>
+<ul>
+	<li>java</li>
+    <li>c++</li>
+    <li>python</li>
+</ul>
+<p1>관심있는 분야</p1>
+<ul>
+	<li>게임 개발</li>
+    <li>서버</li>
+</ul>
+<p1>간단한 소개</p1>
+<p>세명대학교에 재학하고있는 3학년 정보통신학부 학생 입니다.</p>
+<pre>현재는 파이썬 동아리를 하면서 코딩테스트 준비를 하고있고 자바와 c++과 
+같은 객체지향언어 들에 대한 공부도하고 있습니다
+지금 가장 관심 있는 분야는 c++과 c#을 사용하는 언리얼 엔진을 이용한 게임 개발에 관심이 있으며
+클라우드에도 관심이 있어 java언어도 약간아지만 공부하고 있습니다.
 </pre>
+
 
 </body>
 </html>
-
