--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@ p {
   font-family:sans-serif;
   font-size: 25px;
 }
-p1
-{
-font-family:sans-serif;
-  font-size: 25px;}
+
 pre
 {
 font-family:sans-serif;
@@ -38,18 +35,18 @@ font-family:sans-serif;
 
 소속:세명대학교
 </p>
-<p1>공부하고있는 언어</p1>
+<p>공부하고있는 언어</p>
 <ul>
 	<li>java</li>
     <li>c++</li>
     <li>python</li>
 </ul>
-<p1>관심있는 분야</p1>
+<p>관심있는 분야</p>
 <ul>
 	<li>게임 개발</li>
     <li>서버</li>
 </ul>
-<p1>간단한 소개</p1>
+<p>간단한 소개</p>
 <p>세명대학교에 재학하고있는 3학년 정보통신학부 학생 입니다.</p>
 <pre>현재는 파이썬 동아리를 하면서 코딩테스트 준비를 하고있고 자바와 c++과 
 같은 객체지향언어 들에 대한 공부도하고 있습니다
